# projectair

./: .dockerignore  .gitignore  AGENTS.md  AIR_Pressure_Test_and_Roadmap.docx  CHANGELOG.md  CLAUDE.md  Claude Code session for YC .txt  FIXES_APPLIED_2026-06-22.md  MIGRATION_PLAN.md  Nullify_AI_Business_Proposal.md  PRESSURE_TEST_2026-06-22.md  PROJECT_AIR_ROADMAP_CONSOLIDATED.md  ProjectAIR_BAA_v1.0.docx  README.md  SECURITY.md  Vindicara_Pitch_Deck.pptx  ai-guardrails-analysis.docx  air-demo-registry.yaml  bedrock_chat.py  cdk.context.json  cdk.json  package-lock.json  pyproject.toml  vindicara_slides.pptx  website design.avif
.github/: dependabot.yml
.github/workflows/: ci-projectair.yml  deploy-site.yml  ethicalcheck.yml  sca.yml
air-demo-out/: forensic-report.cef
axiisium/: ARCHITECTURE.md  BUILD_AND_GTM.md  NVIDIA_FIRST.md  README.md  feasibility.py  requirements.txt  run_all.py  run_record.json  run_record_stage1.json  run_record_stage2.json  run_record_stage3.json  run_record_stage4.json  stage1.py  stage2.py  stage3.py  stage4.py  stage5.py
axiisium/src/axiisium/: __init__.py  data.py  model.py  trust.py
axiisium/stage1/: README.md
axiisium/stage2/: README.md
axiisium/stage3/: README.md
axiisium/stage4/: README.md
axiisium/stage5/: README.md
demo/: denials_demo.py  evidence_packet.json
deploy/: Dockerfile  README.md  demo_selfhosted.sh  make_demo_capsule.py  make_demo_license.py
design-mockups/: air-deep-audit-running.html  air-flightdeck-inbox.html  air-onboarding.html  mono-specimen.html  pro-flightdeck-demo.html
docs/: ARCHITECTURE.md  CLAUDE.md  DETECTORS.md  SPEC.md  STANDARDS.md  admissibility.md  air-cloud-deploy.md  ci-deploy-role-iam.md  legacy-vindicara-readme.md  ops-chain-deploy.md  ops-chain.md  pro-tier-spec.md  team-tier-spec.md
docs/design/: asi07.md  ops-chain.md
docs/legal/: security-disclosure-policy.md
docs/pitch/: Vindicara_Pitch_Deck.md  accelerator-applications.md  air_deck.html  air_deck.md  cofounder-qa.md  demo-video-3min.md  icc-deck-content.md  pitch-deck-2026-05-08.html  project-air-pitch-2026-05-10.pptx  video-scripts.md
docs/pitch/demo-assets/: README.md  air-article72-output.txt  air-demo-output.txt  article72-report-head.md  forensic-report-head.json
docs/sales/: email-templates.md
docs/superpowers/plans/: 2026-03-31-agent-iam.md  2026-04-02-blog-pages.md  2026-04-02-landing-page-trust-signals.md  2026-04-09-demo-dashboard.md  2026-04-15-auth-system-completion.md  2026-05-14-team-workspace-management.md  2026-05-18-data-governance-module.md  2026-05-21-site-day-mode.md  2026-05-25-hl7v2-fhir-siem-gateway.md  2026-05-26-identity-capture.md  2026-06-23-flightdeck-sign-in.md
docs/superpowers/specs/: 2026-03-31-mcp-security-scanner-design.md  2026-04-01-compliance-and-drift-design.md  2026-04-02-blog-design.md  2026-04-02-landing-page-trust-signals-design.md  2026-04-09-auth-system-design.md  2026-04-09-demo-dashboard-design.md  2026-05-14-team-workspace-management-design.md  2026-05-18-agdr-canonicalization-merkle-design.md  2026-05-18-data-governance-module-design.md  2026-05-18-sealed-report-verification-design.md  2026-05-21-site-day-mode-design.md  2026-05-25-hl7v2-fhir-siem-gateway-design.md  2026-05-25-identity-capture-design.md  2026-06-23-flightdeck-sign-in-design.md
scripts/: build-lambda.sh  build_pitch_deck.py  deploy-site.sh  e2e_air_cloud.py  e2e_ops_chain.py  lint.sh  test.sh
site/: .env.example  CLAUDE.md  package-lock.json  package.json  svelte.config.js
site/scripts/: og-template.html
site/src/: app.css  app.html  asciinema-player.d.ts
site/src/lib/: theme.svelte.ts
site/src/routes/: +layout.svelte  +page.svelte
site/static/: email-signature.html  robots.txt  sig-preview.html  sitemap.xml
site/static/demo-assets/: air-demo.cast
src/vindicara/: __init__.py
src/vindicara/api/: app.py  deps.py
src/vindicara/audit/: storage.py
src/vindicara/cloud/: __init__.py  admin.py  capabilities.py  capsule_store.py  ddb_api_key_store.py  ddb_capsule_store.py  ddb_workspace_store.py  event_bus.py  factory.py  file_stores.py  lambda_handler.py  middleware.py  roles.py  session_token.py  sso.py  workspace.py
src/vindicara/compliance/: __init__.py  collector.py  frameworks.py  models.py  reporter.py
src/vindicara/config/: constants.py  settings.py
src/vindicara/dashboard/: __init__.py  app.py  demo.py  routes.py
src/vindicara/engine/: __init__.py  evaluator.py  policy.py
src/vindicara/identity/: __init__.py  authz.py  models.py  registry.py
src/vindicara/infra/: app.py
src/vindicara/licensing/: __init__.py  issuer.py
src/vindicara/mcp/: __init__.py  analyzer.py  prober.py  scanner.py  transport.py
src/vindicara/monitor/: __init__.py  baseline.py  breaker.py  drift.py  models.py
src/vindicara/notifications/: __init__.py  email.py
src/vindicara/ops/: __init__.py  anchorer.py  ddb_transport.py  publisher.py  recorder.py  redaction.py  schema.py
src/vindicara/sdk/: __init__.py  client.py  decorators.py  exceptions.py  types.py
src/vindicara/webhooks/: handler.py
tests/: conftest.py
tests/integration/: test_breaker_chain.py
tests/integration/api/: test_agents_endpoint.py  test_capsules_endpoint.py  test_guard_endpoint.py  test_health.py  test_monitor_endpoint.py  test_policies_endpoint.py  test_reports_endpoint.py
tests/integration/cloud/: test_air_cloud_app.py  test_air_cloud_roles.py  test_air_cloud_sso.py  test_findings_tier_gate.py
tests/integration/dashboard/: test_demo.py  test_pages.py
tests/unit/: test_feature_registry.py
vindicara-site/: .dockerignore  .gitignore  CONTACT_FORM.md  DEPLOY.md  Dockerfile  README.md  jsconfig.json  package-lock.json  package.json  svelte.config.js  vite.config.js  vite.config.js.timestamp-1780743094204-89b6cb6bb91dd.mjs  vite.config.js.timestamp-1780743124045-e76b8d06a21d6.mjs  vite.config.js.timestamp-1780799539136-a82f39d36d2e6.mjs
vindicara-site/scripts/: gen-lattice.mjs
vindicara-site/src/: app.html  hooks.client.js  hooks.server.js  three.d.ts
vindicara-site/static/: robots.txt  sitemap.xml
(+389 files in other folders)
